# Projet_LOG430

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  nginx.conf  prometheus.yml
centre_logistique/: .env-example  Cargo.toml  Dockerfile  docker-compose.yml  nginx.conf  prometheus.yml
centre_logistique/migrations/2025-06-23-205152_create_magasins/: down.sql  up.sql
centre_logistique/migrations/2025-06-23-205225_create_produits/: down.sql
centre_logistique/migrations/2025-06-23-205231_create_inventaires/: down.sql  up.sql
centre_logistique/migrations/2025-06-23-205244_create_transactions/: up.sql
centre_logistique/migrations/2025-06-23-205310_create_transaction_produits/: up.sql
centre_logistique/migrations/2025-06-23-210102_create_messages/: up.sql
centre_logistique/migrations/2025-07-08-181049_alter_transaction/: down.sql  up.sql
centre_logistique/migrations/2025-07-09-053122_create_reapprovisionnements/: down.sql  up.sql
centre_logistique/src/: cache.rs  dto.rs  examples.rs  main.rs  metrics.rs  routes.rs  schema.rs
centre_logistique/src/controllers/: inventaire_controller.rs  message_controller.rs  mod.rs  produit_controller.rs  reapprovisionnement_controller.rs  transaction_controller.rs  transaction_produit_controller.rs
centre_logistique/src/models/: inventaire.rs  magasin.rs  message.rs  mod.rs  produit.rs  reapprovisionnement.rs  transaction.rs  transaction_produit.rs
centre_logistique/src/seeds/: mod.rs  seed_inventaires.rs  seed_magasins.rs  seed_produits.rs
centre_logistique/static/: index.html
centre_logistique/test_stress/: load_test_produit.js  load_test_transaction.js
magasin/: .env-example  Cargo.toml  Dockerfile
magasin/migrations/2025-06-21-222020_create_produits/: up.sql
magasin/migrations/2025-06-21-225222_create_transaction_produits/: down.sql
magasin/src/: db.rs  dto.rs  main.rs
magasin/src/controllers/: achat_controller.rs  consulter_controller.rs  inventaire_controller.rs  login_controller.rs  menu_controller.rs  mod.rs  recherche_controller.rs  retour_controller.rs  synchroniser_controller.rs  transaction_controller.rs  transaction_produit_controller.rs
magasin/src/mappers/: mod.rs  transaction_produit_mapper.rs
magasin/src/models/: client.rs  inventaire.rs  mod.rs  produit.rs  transaction.rs  transaction_produit.rs
magasin/src/routes/: api.rs
magasin/src/seeds/: mod.rs  seed_clients.rs  seed_inventaires.rs  seed_produits.rs
magasin/src/views/: achat_view.rs  consulter_view.rs  login_view.rs  menu_view.rs  mod.rs  recherche_view.rs  retour_view.rs
magasin_enligne/: .env-example  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml
magasin_enligne/migrations/2025-06-21-220326_create_clients/: up.sql
magasin_enligne/migrations/2025-06-21-222105_create_inventaires/: down.sql  up.sql
magasin_enligne/migrations/2025-06-21-223922_create_transactions/: up.sql
magasin_enligne/migrations/2025-06-21-225222_create_transaction_produits/: up.sql
magasin_enligne/src/: db.rs  dto.rs  main.rs  routes.rs  schema.rs
magasin_enligne/src/controllers/: achat_controller.rs  home_controller.rs  login_controller.rs  menu_controller.rs  mod.rs  produit_controller.rs  recherche_controller.rs
magasin_enligne/src/models/: client.rs  inventaire.rs  mod.rs  produit.rs  transaction.rs  transaction_produit.rs
magasin_enligne/src/seeds/: mod.rs  seed_clients.rs  seed_inventaires.rs
magasin_enligne/templates/: ajouter_panier.html.tera  base.html.tera  home.html.tera  login.html.tera  menu.html.tera  panier.html.tera  produit.html.tera  recherche.html.tera
maison_mere/: .env-example  Cargo.toml  Dockerfile  Rocket.toml
maison_mere/src/: main.rs  routes.rs
maison_mere/templates/: base.html.tera  home.html.tera  performances.html.tera
(+31 files in other folders)
