[package]
name = "centre_logistique"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_postgres_pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono", "serde_json"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
rocket_okapi = { version = "0.9", features = ["swagger"] }
schemars = { version = "0.8", features = ["chrono"] }
prometheus = "0.13"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-appender = "0.2"
cached = "0.34"
cached_proc_macro = "0.7"
