[package]
name = "magasin"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.11", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
once_cell = "1.18"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }