[package]
name = "magasin_enligne"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.0.4", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
genpdf = { version = "0.2.0-alpha.1" }
rocket_okapi = "0.9"
once_cell = "1.17"
schemars = { version = "0.8", features = ["derive"] }
